25-09-2009 J-Donald Tournier <d.tournier@brain.org.au>
    * cmd/dwi2SH.cpp:
    * cmd/csdeconv.cpp:
    * cmd/sdeconv.cpp: fix documentation of SH coefficient storage convention

22-09-2009 J-Donald Tournier <d.tournier@brain.org.au>
    * src/mrview/sidebar/orientation_plot.cpp: add config option to set background colour

17-09-2009 J-Donald Tournier <d.tournier@brain.org.au>
    * cmd/dwi2tensor.cpp: improved support for images that might use a different dimension for the DWI

17-09-2009 J-Donald Tournier <d.tournier@brain.org.au>
    * lib/file/dicom/image.cpp: added preliminary support to read Philips DW information

17-09-2009 J-Donald Tournier <d.tournier@brain.org.au>
    * lib/app.cpp: fix bug in command-line parsing (fix supplied by Tom Close)
    
11-09-2009 J-Donald Tournier <d.tournier@brain.org.au>
    * src/dwi/SH.cpp: fix bug in computation of second derivative of SH series (pointed out by Ben Jeurissen).
    
09-09-2009 J-Donald Tournier <d.tournier@brain.org.au>
    * lib/file/dicom/csa_entry.h:
    * lib/file/dicom/element.cpp:
      include <cstdio> to allow compilation on Fedora 11


=======================================================================
VERSION 0.2.7
=======================================================================

24-08-2009 J-Donald Tournier <d.tournier@brain.org.au>
    * src/dwi/tensor.h: use sqrt(1.5) instead of sqrt(3/2) when computing the
    FA. This was rounded down to 1 since the compiler assumed integer
    arithmetic (thanks to Kerstin Pannek for pointing this out).

16-08-2009 J-Donald Tournier <d.tournier@brain.org.au>
    * cmd/resample_tracks.cpp: Improved the track resampling routine to allow for curved tracks.

13-08-2009 J-Donald Tournier <d.tournier@brain.org.au>
    * cmd/gen_unit_warp.cpp: Added command to generate unitary warp. This is
    intended for use with other normalisation programs. The unitary warp field
    generated by this program can be warped by a third party normalisation